deployment/1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: muzzafarjahangir/cgirepo:10
        resources:
          limits:
            memory: "100Mi"
            cpu: "120m"
        ports:
        - containerPort: 80
