deployment/5-Ingress-rule.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: node-ingress 
  namespace: ingress-base 
  annotations: 
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/rewrite-target: /$1 
spec: 
  rules: 
    - host:  
      http: 
        paths: 
          - path: / 
            pathType: Prefix 
            backend: 
              service: 
                name: myapp 
                port: 
                  number: 80
